# Samples CMake file

add_subdirectory(AppendArchiveToBinary)
add_subdirectory(CreateArchive)
add_subdirectory(ExtractArchive)
add_subdirectory(ExtractArchiveFromBinary)
add_subdirectory(TestArchive)
add_subdirectory(TestBuffer)
add_subdirectory(TestThread)
add_subdirectory(debug_sample)
add_subdirectory(registry_sample)
